--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -623,10 +623,10 @@
                                             @Html.DisplayFor(modelItem => item.ProjectPriority.Id)
                                         </td>
                                         <td>
-                                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                            <a asp-action="AssignMembers" asp-route-id="@item.Id">Assign Members</a> |
-                                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                            <a asp-action="Edit" asp-controller="Projects" asp-route-id="@item.Id">Edit</a> |
+                                            <a asp-action="Details" asp-controller="Projects" asp-route-id="@item.Id">Details</a> |
+                                            <a asp-action="AssignMembers" asp-controller="Projects" asp-route-id="@item.Id">Assign Members</a> |
+                                            <a asp-action="Delete" asp-controller="Projects" asp-route-id="@item.Id">Delete</a>
                                         </td>
                                     </tr>
                                 }
@@ -696,9 +696,9 @@
                                         </td>
 
                                         <td>
-                                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                            <a asp-action="Edit" asp-controller="Tickets" asp-route-id="@item.Id">Edit</a> |
+                                            <a asp-action="Details" asp-controller="Tickets" asp-route-id="@item.Id">Details</a> |
+                                            <a asp-action="Delete" asp-controller="Tickets" asp-route-id="@item.Id">Delete</a>
                                         </td>
                                     </tr>
                                 }
@@ -740,6 +740,5 @@
             $('#ticketTable').DataTable();
         });
     </script>
-
 
 }
