--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -8,58 +8,49 @@
 
 <h4>Project</h4>
 <hr />
-@*<div class="row">
+<div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <form asp-action="Create" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
+
                 <div class="form-group">
-                    <label asp-for="CompanyId" class="control-label"></label>
-                    <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                    <label asp-for="Project.Name" class="control-label"></label>
+                    <input asp-for="Project.Name" class="form-control" />
+                    <span asp-validation-for="Project.Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <label asp-for="Project.Description" class="control-label"></label>
+                    <input asp-for="Project.Description" class="form-control" />
+                    <span asp-validation-for="Project.Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <label asp-for="Project.StartDate" class="control-label"></label>
+                    <input asp-for="Project.StartDate" class="form-control" type="date" value="@DateTime.Now.ToString("yyyy-dd-MM")" />
+                    <span asp-validation-for="Project.StartDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="StartDate" class="control-label"></label>
-                    <input asp-for="StartDate" class="form-control" />
-                    <span asp-validation-for="StartDate" class="text-danger"></span>
+                    <label asp-for="Project.EndDate" class="control-label"></label>
+                    <input asp-for="Project.EndDate" class="form-control" type="date"  value="@DateTime.Now.ToString("yyyy-dd-MM")"/>
+                    <span asp-validation-for="Project.EndDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="EndDate" class="control-label"></label>
-                    <input asp-for="EndDate" class="form-control" />
-                    <span asp-validation-for="EndDate" class="text-danger"></span>
+                    <label class="control-label">Priority</label>
+                    <select asp-for="ProjectPriority" class="form-control" asp-items="@Model.PriorityList"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ProjectPriorityId" class="control-label"></label>
-                    <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FileName" class="control-label"></label>
-                    <input asp-for="FileName" class="form-control" />
-                    <span asp-validation-for="FileName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FileData" class="control-label"></label>
-                    <input asp-for="FileData" class="form-control" />
-                    <span asp-validation-for="FileData" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FileContentType" class="control-label"></label>
-                    <input asp-for="FileContentType" class="form-control" />
-                    <span asp-validation-for="FileContentType" class="text-danger"></span>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+                    <label class="control-label">Project Image</label>
+                    @if (Model.Project.FileData != null)
+
+                    {
+                <img src="data:image/*;base64, @(Convert.ToBase64String(Model.Project.FileData))" id="imageFileData" alt="" width="200" height="200"> }
+                            else
+                            {
+                <img src="~/img/upload.png" id="imageFileData" alt="" width="200" height="200">}
+                    <label class="btn btn-primary btn-sm text-light">
+                        Change Avatar <input type="file" accept=".png,.jpg,.jpeg,.gif" asp-for="Project.ImageFormFile" onchange="document.getElementById('imageFileData').src= window.URL.createObjectURL(this.files[0])" hidden>
                     </label>
                 </div>
+
                 <div class="form-group">
                     <label class="control-label">ProjectManager</label>
                     <select asp-for="PmId" class="form-control" asp-items="@Model.PMList"></select>
@@ -77,4 +68,4 @@
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }*@
+    }
