--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -10,14 +10,15 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
-                <span asp-validation-for="CompanyId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="CompanyId" />
+            <input type="hidden" asp-for="FileData" />
+            <input type="hidden" asp-for="FileContentType" />
+            <input type="hidden" asp-for="FileName" />
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -30,41 +31,34 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" class="form-control" type="date" value="@DateTime.Now.ToString("yyyy-dd-MM")" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
+                <input asp-for="EndDate" class="form-control" type="date" value="@DateTime.Now.ToString("yyyy-dd-MM")" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectPriorityId" class="control-label"></label>
-                <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
-                <span asp-validation-for="ProjectPriorityId" class="text-danger"></span>
+                <label class="control-label">Priority</label>
+                <select asp-for="ProjectPriorityId" class="form-control" asp-items="@ViewBag.ProjectPriorityId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="FileName" class="control-label"></label>
-                <input asp-for="FileName" class="form-control" />
-                <span asp-validation-for="FileName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FileData" class="control-label"></label>
-                <input asp-for="FileData" class="form-control" />
-                <span asp-validation-for="FileData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FileContentType" class="control-label"></label>
-                <input asp-for="FileContentType" class="form-control" />
-                <span asp-validation-for="FileContentType" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+                <label class="control-label">Project Image</label>
+                @if (Model.FileData != null)
+
+                {
+                    <img src="data:image/*;base64, @(Convert.ToBase64String(Model.FileData))" id="imageFileData" alt="" width="200" height="200"> }
+                else
+                {
+                    <img src="~/img/upload.png" id="imageFileData" alt="" width="200" height="200">}
+                <label class="btn btn-primary btn-sm text-light">
+                    Change Avatar <input type="file" accept=".png,.jpg,.jpeg,.gif" asp-for="ImageFormFile" onchange="document.getElementById('imageFileData').src= window.URL.createObjectURL(this.files[0])" hidden>
                 </label>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
