--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -194,8 +194,8 @@
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <div>
-                            <span>@btUser.FirstName</span> - 
-                           
+                            <span>@btUser.FirstName</span> -
+
                             @{
                                 @foreach (var role in await UserManager.GetRolesAsync(btUser))
                                 {
@@ -206,6 +206,7 @@
                             }
                         </div>
                     </a>
+                    <partial name="_LogoutPartial" />
                     <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
                         <div class="">
                             <div class="dropdown-item">
@@ -218,7 +219,7 @@
                                 <a class="" href="auth_lockscreen.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg> Lock Screen</a>
                             </div>
                             <div class="dropdown-item">
-                                <a class="" href="auth_login.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg> Sign Out</a>
+                                <a class="" href="javascript:document.getElementById('logoutForm').submit();"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg> Sign Out</a>
                             </div>
                         </div>
                     </div>
@@ -239,7 +240,7 @@
                                 <a class="" href="auth_lockscreen.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg> Lock Screen</a>
                             </div>
                             <div class="dropdown-item">
-                                <a class="" href="auth_login.html"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg> Sign Out</a>
+                                <a class="" href="javascript:document.getElementById('logoutForm').submit();"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg> Sign Out</a>
                             </div>
                         </div>
                     </div>
@@ -306,6 +307,8 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
                             </div>
                         </a>
+                        @*add actions to be able to view different dashboard pages. and change the link names and add actions once you decide how you want to do that. CReate the views using the
+                            html in vscode.*@
                         <ul class="collapse submenu list-unstyled show" id="dashboard" data-parent="#accordionExample">
                             <li class="active">
                                 <a href="index.html"> Sales </a>
@@ -317,62 +320,10 @@
                     </li>
 
                     <li class="menu">
-                        <a href="#app" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                            <div class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-cpu"><rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect><rect x="9" y="9" width="6" height="6"></rect><line x1="9" y1="1" x2="9" y2="4"></line><line x1="15" y1="1" x2="15" y2="4"></line><line x1="9" y1="20" x2="9" y2="23"></line><line x1="15" y1="20" x2="15" y2="23"></line><line x1="20" y1="9" x2="23" y2="9"></line><line x1="20" y1="14" x2="23" y2="14"></line><line x1="1" y1="9" x2="4" y2="9"></line><line x1="1" y1="14" x2="4" y2="14"></line></svg>
-                                <span>Apps</span>
-                            </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                            </div>
-                        </a>
-                        <ul class="collapse submenu list-unstyled" id="app" data-parent="#accordionExample">
-                            <li>
-                                <a href="apps_chat.html"> Chat </a>
-                            </li>
-                            <li>
-                                <a href="apps_mailbox.html"> Mailbox  </a>
-                            </li>
-                            <li>
-                                <a href="apps_todoList.html"> Todo List </a>
-                            </li>
-                            <li>
-                                <a href="apps_notes.html"> Notes </a>
-                            </li>
-                            <li>
-                                <a href="apps_scrumboard.html">Scrumboard</a>
-                            </li>
-                            <li>
-                                <a href="apps_contacts.html"> Contacts </a>
-                            </li>
-                            <li>
-                                <a href="#appInvoice" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Invoice <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg> </a>
-                                <ul class="collapse list-unstyled sub-submenu" id="appInvoice" data-parent="#app">
-                                    <li>
-                                        <a href="apps_invoice-list.html"> List </a>
-                                    </li>
-                                    <li>
-                                        <a href="apps_invoice-preview.html"> Preview </a>
-                                    </li>
-                                    <li>
-                                        <a href="apps_invoice-add.html"> Add </a>
-                                    </li>
-                                    <li>
-                                        <a href="apps_invoice-edit.html"> Edit </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="apps_calendar.html"> Calendar </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li class="menu">
                         <a href="#components" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
-                                <span>Components</span>
+                                <span>Projects</span>
                             </div>
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
@@ -380,53 +331,107 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
                             <li>
-                                <a href="component_tabs.html"> Tabs </a>
+                                <a asp-controller="Projects" asp-action="Index"> All Projects </a>
                             </li>
                             <li>
-                                <a href="component_accordion.html"> Accordions  </a>
+                                <a asp-controller="Projects" asp-action="Create"> Create New Project  </a>
                             </li>
                             <li>
-                                <a href="component_modal.html"> Modals </a>
+                                <a asp-controller="Projects" asp-action="MyProjects">My Projects </a>
+                            </li>
+
+                            @*may create a foreach loop to display the most recent projects*@
+
+                            @*<li>
+                                    <a href="component_cards.html"> Cards </a>
+                                </li>
+                                <li>
+                                    <a href="component_bootstrap_carousel.html">Carousel</a>
+                                </li>
+                                <li>
+                                    <a href="component_blockui.html"> Block UI </a>
+                                </li>
+                                <li>
+                                    <a href="component_countdown.html"> Countdown </a>
+                                </li>
+                                <li>
+                                    <a href="component_counter.html"> Counter </a>
+                                </li>
+                                <li>
+                                    <a href="component_sweetalert.html"> Sweet Alerts </a>
+                                </li>
+                                <li>
+                                    <a href="component_timeline.html"> Timeline </a>
+                                </li>
+                                <li>
+                                    <a href="component_snackbar.html"> Notifications </a>
+                                </li>
+                                <li>
+                                    <a href="component_session_timeout.html"> Session Timeout </a>
+                                </li>
+                                <li>
+                                    <a href="component_media_object.html"> Media Object </a>
+                                </li>
+                                <li>
+                                    <a href="component_list_group.html"> List Group </a>
+                                </li>
+                                <li>
+                                    <a href="component_pricing_table.html"> Pricing Tables </a>
+                                </li>
+                                <li>
+                                    <a href="component_lightbox.html"> Lightbox </a>
+                                </li>*@
+                        </ul>
+                    </li>
+                    <li class="menu">
+                        <a href="#app" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                            <div class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-cpu"><rect x="4" y="4" width="16" height="16" rx="2" ry="2"></rect><rect x="9" y="9" width="6" height="6"></rect><line x1="9" y1="1" x2="9" y2="4"></line><line x1="15" y1="1" x2="15" y2="4"></line><line x1="9" y1="20" x2="9" y2="23"></line><line x1="15" y1="20" x2="15" y2="23"></line><line x1="20" y1="9" x2="23" y2="9"></line><line x1="20" y1="14" x2="23" y2="14"></line><line x1="1" y1="9" x2="4" y2="9"></line><line x1="1" y1="14" x2="4" y2="14"></line></svg>
+                                <span>Tickets</span>
+                            </div>
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                            </div>
+                        </a>
+                        <ul class="collapse submenu list-unstyled" id="app" data-parent="#accordionExample">
+                            <li>
+                                <a asp-controller="Tickets" asp-action="Index"> All Tickets </a>
                             </li>
                             <li>
-                                <a href="component_cards.html"> Cards </a>
+                                <a asp-controller="Tickets" asp-action="Create"> Create New Ticket  </a>
                             </li>
                             <li>
-                                <a href="component_bootstrap_carousel.html">Carousel</a>
+                                <a asp-controller="Tickets" asp-action="Delete"> Delete A Ticket </a>
                             </li>
                             <li>
-                                <a href="component_blockui.html"> Block UI </a>
+                                <a asp-controller="TicketComments" asp-action="Index"> Ticket Comments </a>
                             </li>
                             <li>
-                                <a href="component_countdown.html"> Countdown </a>
+                                <a asp-controller="TicketAttachments" asp-action="Index">Ticket Attachments</a>
                             </li>
                             <li>
-                                <a href="component_counter.html"> Counter </a>
+                                <a asp-controller="TicketHistories" asp-action="Index"> Ticket Histories </a>
                             </li>
-                            <li>
-                                <a href="component_sweetalert.html"> Sweet Alerts </a>
-                            </li>
-                            <li>
-                                <a href="component_timeline.html"> Timeline </a>
-                            </li>
-                            <li>
-                                <a href="component_snackbar.html"> Notifications </a>
-                            </li>
-                            <li>
-                                <a href="component_session_timeout.html"> Session Timeout </a>
-                            </li>
-                            <li>
-                                <a href="component_media_object.html"> Media Object </a>
-                            </li>
-                            <li>
-                                <a href="component_list_group.html"> List Group </a>
-                            </li>
-                            <li>
-                                <a href="component_pricing_table.html"> Pricing Tables </a>
-                            </li>
-                            <li>
-                                <a href="component_lightbox.html"> Lightbox </a>
-                            </li>
+                            @*<li>
+                                    <a href="#appInvoice" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Invoice <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg> </a>
+                                    <ul class="collapse list-unstyled sub-submenu" id="appInvoice" data-parent="#app">
+                                        <li>
+                                            <a href="apps_invoice-list.html"> List </a>
+                                        </li>
+                                        <li>
+                                            <a href="apps_invoice-preview.html"> Preview </a>
+                                        </li>
+                                        <li>
+                                            <a href="apps_invoice-add.html"> Add </a>
+                                        </li>
+                                        <li>
+                                            <a href="apps_invoice-edit.html"> Edit </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="apps_calendar.html"> Calendar </a>
+                                </li>*@
                         </ul>
                     </li>
 
