--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<TitanTracker.Models.Ticket>
+@using TitanTracker.Models.Enums
 
 @{
     ViewData["Title"] = "Index";
@@ -24,26 +25,24 @@
             <th>
                 @Html.DisplayNameFor(model => model.Updated)
             </th>
+          
             <th>
-                @Html.DisplayNameFor(model => model.Archived)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TicketPriorityId)
+               Priority
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Project)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketType)
+               Type
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketStatus)
+              Status
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OwnerUser)
+              Submitter
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DeveloperUser)
+               Developer
             </th>
             <th></th>
         </tr>
@@ -64,26 +63,25 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Updated)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Archived)
-                </td>
+            
                 <td>
                     @Html.DisplayFor(modelItem => item.TicketPriorityId)
+
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Project.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.TicketType.Id)
+                    @Html.DisplayFor(modelItem => item.TicketType.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.TicketStatus.Id)
+                    @Html.DisplayFor(modelItem => item.TicketStatus.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.OwnerUser.Id)
+                    @Html.DisplayFor(modelItem => item.OwnerUser.FullName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DeveloperUser.Id)
+                    @Html.DisplayFor(modelItem => item.DeveloperUser.FullName)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
